// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blocks / Adjacent Post Links Story Integration shall pass integration sanity test | next post only 1`] = `
"<div class=\\"adjacent-post-links-story\\">
  <!---->
  <nuxtlink to=\\"/opowiadania/mock-post/\\" class=\\"adjacent-post-links-story__next adjacent-post-link adjacent-post-link--next\\"><span class=\\"adjacent-post-link__title\\">timeReading</span> <span class=\\"adjacent-post-link__label\\">Następne</span></nuxtlink>
</div>"
`;

exports[`Blocks / Adjacent Post Links Story Integration shall pass integration sanity test | prev / next post 1`] = `
"<div class=\\"adjacent-post-links-story\\">
  <nuxtlink to=\\"/opowiadania/mock-post/\\" class=\\"adjacent-post-links-story__previous adjacent-post-link adjacent-post-link--previous\\"><span class=\\"adjacent-post-link__title\\">timeReading</span> <span class=\\"adjacent-post-link__label\\">Poprzednie</span></nuxtlink>
  <nuxtlink to=\\"/opowiadania/mock-post/\\" class=\\"adjacent-post-links-story__next adjacent-post-link adjacent-post-link--next\\"><span class=\\"adjacent-post-link__title\\">timeReading</span> <span class=\\"adjacent-post-link__label\\">Następne</span></nuxtlink>
</div>"
`;

exports[`Blocks / Adjacent Post Links Story Integration shall pass integration sanity test | prev post only 1`] = `
"<div class=\\"adjacent-post-links-story\\">
  <nuxtlink to=\\"/opowiadania/mock-post/\\" class=\\"adjacent-post-links-story__previous adjacent-post-link adjacent-post-link--previous\\"><span class=\\"adjacent-post-link__title\\">timeReading</span> <span class=\\"adjacent-post-link__label\\">Poprzednie</span></nuxtlink>
  <!---->
</div>"
`;
